move CV1 folder to parent folder

--- a/CV/index.html
+++ b/CV/index.html
@@ -43,7 +43,7 @@
                 </ul>
             </div>
             <div class="contact info-unit">
-                <h2 class="info-header"><i class="iconfont icon-call"></i> <span class="info-title">联系方式</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-call"></i><span class="info-title">联系方式</span></h2>
                 <hr>
                 <ul class="info-list">
                     <li>
@@ -53,10 +53,10 @@
                         <label class="left-label">邮箱</label><span class="label-value">waiwong02@outlook.com</span>
                     </li>
                     <li>
-                        <label class="left-label">Github</label><span class="label-value">github.com/waiwong</span>
+                        <label class="left-label">Github</label><span class="label-value"><a href="https://github.com/waiwong" target="_blank">github.com/waiwong</a></span>
                     </li>
                     <li>
-                        <label class="left-label">Linkedin</label><span class="label-value">https://www.linkedin.com/in/wei-wang-2b0926ab</span>
+                        <label class="left-label">Linkedin</label><span class="label-value"><a href="https://www.linkedin.com/in/wei-wang-2b0926ab" target="_blank">linkedin/weiwang</a></span>
                     </li>
                 </ul>
             </div>
@@ -99,7 +99,7 @@
                     </li>
                     </li>
                 </ul>
-            </div>           
+            </div>
         </div>
         <div class="main">
             <div class="education info-unit right-list">
@@ -107,9 +107,13 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>北京邮电大学 - 网络工程专业（本科）2012-2017</h3>
+                        <h3>澳门大学 (2014-08 至 2018-07)</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            <ul>
+                                <li>论文题目： Automatic Chinese Calligraphic Font Generation with Machine Learning Technology</li>
+                                <li>GPA: 3.28</li>
+                                <li>注：澳门大学的研究生不区分在职与脱产，所有的课程都是在晚上。因为我白天需要上班，所以为了这个自我增值的机会，我付出了很多，很努力的学习，但也多花了一年的时间才顺利拿到证书。</li>
+                            </ul>
                         </p>
                     </li>
                 </ul>
@@ -119,9 +123,14 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>北京创客空间－实习生（实习）</h3>
+                        <h3>澳门华侨永亨银行  (2010-08 至 至今)</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            <ul>
+                                <li type="I">根据用户需求来设计程序，程序代码满足程序规范。</li>
+                                <li type="I">准备测试计划和测试数据，以测试新/修订计划及其准确性和效率。</li>
+                                <li type="I">准备和更新程序文档。</li>
+                                <li type="I">协助设计程序规范。</li>
+                            </ul>
                         </p>
                     </li>
                 </ul>
