--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
----
-layout: default
----
+<script type="text/javascript">
+    function load()
+    {
+    window.location.href = "http://externalpage.com";
 
+    }
+    </script>
 <div id="ace-content" class="ace-container-shift">
     <div class="ace-container">
         <div id="ace-nav-wrap" class="hidden-sm hidden-xs">
