--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <script type="text/javascript">
-    function load()
-    {
-    window.location.href = "http://externalpage.com";
-
-    }
+    window.onload = function () { window.location.href = "https://waiwong.github.io/CV/index.html"; }
     </script>
 <div id="ace-content" class="ace-container-shift">
     <div class="ace-container">
