--- a/CV/index.html
+++ b/CV/index.html
@@ -9,6 +9,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.min.js"></script>
     <script src="static/js/script.js"></script>
+    <style type="text/css">
+        a {
+            text-decoration: none;
+            background-color: transparent;
+        }
+
+        .btnDownload {
+            -webkit-border-radius: 5px;
+            border-radius: 5px;
+            font-size: 18px;
+            font-family: 'Open Sans', sans-serif;
+            font-weight: 700;
+            border: 3px solid #5b4c5c;
+            padding: 10px 10px;
+            display: inline-block;
+            color: #5b4c5c;
+            transition-duration: 0.2s;
+            -webkit-transition-duration: 0.2s;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
     <div class="container" id="cv">
@@ -22,7 +43,7 @@
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
                 </div>
                 <h1 id="username">王维</h1>
-                <h4 id="persona-tag">Python / Web / Machine Learning</h4>
+                <h4 id="persona-tag">Web / Asp.Net / Python / Machine Learning</h4>
             </div>
             <div class="profile info-unit">
                 <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
@@ -43,7 +64,7 @@
                 </ul>
             </div>
             <div class="contact info-unit">
-                <h2 class="info-header"><i class="iconfont icon-call"></i><span class="info-title">联系方式</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-call"></i> <span class="info-title">联系方式</span></h2>
                 <hr>
                 <ul class="info-list">
                     <li>
@@ -58,9 +79,10 @@
                     <li>
                         <label class="left-label">Linkedin</label><span class="label-value"><a href="https://www.linkedin.com/in/wei-wang-2b0926ab" target="_blank">linkedin/weiwang</a></span>
                     </li>
+
                 </ul>
             </div>
-            <div class="skill info-unit">
+            <div class="skill info-unit" style="display:none">
                 <h2 class="info-header"><i class="iconfont icon-star"></i> <span class="info-title">tag</span></h2>
                 <hr>
                 <ul class="progress-list">
@@ -82,23 +104,23 @@
                     </li>
                 </ul>
             </div>
-            <div class="stack info-unit">
-                <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title">技术栈</span></h2>
+            <div class="stack info-unit" style="display:none">
+                <h2 class="info-header"><i class="iconfont icon-build"></i><span class="info-title">技术栈</span></h2>
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">jQuery、Angular.js、React.js</span>
-                    </li>
+                        <label class="left-label">前端</label><span class="label-value">jQuery、Angular.js</span>
                     </li>
                     <li>
                         <label class="left-label">后端</label><span class="label-value">Flask、Django、Twisted、Node.js、MongoDB、MySQL、Redis</span>
                     </li>
-                    </li>
                     <li>
                         <label class="left-label">其它</label><span class="label-value"></span>
                     </li>
-                    </li>
                 </ul>
+            </div>
+            <div class="stack info-unit">
+                <a href="../index.html" class="btnDownload">回到我的主页</a>
             </div>
         </div>
         <div class="main">
@@ -107,12 +129,30 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>澳门大学 (2014-08 至 2018-07)</h3>
+                        <h3>澳门大学 - 研究生 - 计算机科学 (2014-08 至 2018-07)</h3>
                         <p>
                             <ul>
                                 <li>论文题目： Automatic Chinese Calligraphic Font Generation with Machine Learning Technology</li>
-                                <li>GPA: 3.28</li>
                                 <li>注：澳门大学的研究生不区分在职与脱产，所有的课程都是在晚上。因为我白天需要上班，所以为了这个自我增值的机会，我付出了很多，很努力的学习，但也多花了一年的时间才顺利拿到证书。</li>
+                            </ul>
+                        </p>
+                    </li>
+                    <li>
+                        <h3>长沙理工大学 - 本科 - 环境工程 (2001-09 至 2005-06)</h3>
+                        <p>
+                            <ul>
+                                <li>
+                                    该专业的目标为培训具备环境工程学的基本理论、基本技能及相关工程技术知识和计算机应用能力，获得化学、力学、测绘学、电工学方面的科学思维和科学实验与常规训练的能力。
+                                </li>
+                            </ul>
+                        </p>
+                    </li>
+                    <li>
+                        <h3>长沙理工大学 - 第二专业 - 计算机网络与软件工程 (2002-09 至 2004-06)</h3>
+                        <p>
+                            <ul>
+                                <li>该专业的目标为培训具备在计算机网络领域从事网络规划、建设、维护、管理及网络软件的设计、开发、应用的能力,并具有计算机组装与维护、各种网络操作系统网络互联和网站规划建设维护、网络应用软件开发等方面的综合技能。</li>
+                                <li>此课程为学校提供的第二专业，是在周末上课。</li>
                             </ul>
                         </p>
                     </li>
@@ -123,7 +163,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>澳门华侨永亨银行  (2010-08 至 至今)</h3>
+                        <h3>澳门华侨永亨银行 (2010-08 至 至今)</h3>
                         <p>
                             <ul>
                                 <li type="I">根据用户需求来设计程序，程序代码满足程序规范。</li>
@@ -134,8 +174,61 @@
                         </p>
                     </li>
                 </ul>
+                <ul class="experience-list">
+                    <li>
+                        <h3>远光软件股份有限公司 (2008-7 至 2010-7)</h3>
+                        <p>
+                            <ul>
+                                <li type="I">负责远光助手的开发，并按时完成任务。</li>
+                                <li type="I">参与用C#.net和SQL Server的C/S模式的财务会计核算3.0的开发</li>
+                                <li type="I">负责使用Delphi和SQLite的会计档案备案及查询软件的会计档案2.0开发。</li>
+                                <li type="I">负责远光节能网站的开发。</li>
+                            </ul>
+                        </p>
+                    </li>
+                </ul>
+                <ul class="experience-list">
+                    <li>
+                        <h3>珠海伟诚科技有限公司 (2007-8 至 2008-7)</h3>
+                        <p>
+                            <ul typeof="I">
+                                <li type="I">利用Asp.Net、C# 和 Microsoft SQL Server 2000进行基于B/S模式的web应用程序开发</li>
+                            </ul>
+                        </p>
+                    </li>
+                </ul>
             </div>
-            <div class="project info-unit right-list">
+            <div class="aboutme info-unit right-paragraph">
+                <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
+                <hr>
+                <p>
+                    <ul>
+                        <li>我是一个有着强烈责任感的人。</li>
+                        <li>
+                            在几个关键业务系统的开发和维护过程中，我多次担任项目负责人，负责收集并分析用户需求。
+                        </li>
+                        <li>
+                            在工作中，我注重与用户和工作团队进行有效沟通，因为这对于确保可交付成果符合标准，进度和质量非常重要。更重要的是，我具有快速学习的能力，我的勤奋和认真的态度使我能够熟练地应用不同的相关工具，如C＃，MVC和SQL Server，以及并始终在截止日期前高质量的完成我的项目。
+                        </li>
+                        <li>
+                            我具有的批判性思维能力，使我经常可以就发展工作提出一些创新且针对性强的建议。
+                        </li>
+                    </ul>
+                </p>
+            </div>
+            <div class="education info-unit right-list">
+                <h2 class="info-header"><i class="iconfont icon-librarybooks"></i> <span class="info-title">培训经历</span></h2>
+                <hr>
+                <ul class="experience-list">
+                    <li>
+                        <h3>澳门大学持续进修中心 - 商务写作技巧 (2016-05 至 2016-06)</h3>
+                        <p>
+                            培训商务写作的要点和技巧。
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <div class="project info-unit right-list" style="display:none">
                 <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title">个人项目</span></h2>
                 <hr>
                 <ul class="experience-list">
@@ -146,13 +239,6 @@
                         </p>
                     </li>
                 </ul>
-            </div>
-            <div class="aboutme info-unit right-paragraph">
-                <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
-                <hr>
-                <p>
-
-                </p>
             </div>
         </div>
     </div>
