--- a/index.html
+++ b/index.html
@@ -1,75 +1,287 @@
----
-layout: default
----
+﻿<!DOCTYPE html>
+<html>
 
-<div id="ace-content" class="ace-container-shift">
-    <div class="ace-container">
-        <div id="ace-nav-wrap" class="hidden-sm hidden-xs">
-            <div class="ace-nav-cont">
-                <div id="ace-nav-scroll">
-                    <nav id="ace-nav" class="ace-nav">
-                        <ul class="clear-list">
-                            <li>
-                              <a href="index.html" data-tooltip="Home"><img class="avatar avatar-42" src="{{ '/styles/img/show-star.png' | prepend: site.baseurl }}" alt=""></a>
-                            </li>
-                            <li>
-                              <a href="#basic_info" data-tooltip="基本信息"><span class="ace-icon ace-icon-home"></span></a>
-                            </li>
-                            <li>
-                              <a href="#profetional" data-tooltip="职业技能"><span class="ace-icon ace-icon-experience"></span></a>
-                            </li>
+<head>
+    <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="http://cody1991.github.io/favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>WangWei(王维)个人简历</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <link rel="stylesheet" type="text/css" href="resourses/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="resourses/css/style.css">
+    <link rel="stylesheet" href="resourses/css/font-awesome.min.css">
+    <script type="text/javascript">
+        window.onload = function () { window.location.href = "https://waiwong.github.io/CV/index.html"; }
+    </script>
+</head>
 
-                            <li>
-                              <a href="#education" data-tooltip="教育经历"><span class="ace-icon ace-icon-portfolio"></span></a>
-                            </li>
-                            
-                            <li>
-                              <a href="#experience" data-tooltip="工作经历"><span class="ace-icon ace-icon-references"></span></a>
-                            </li>
-                            <li>
-                              <a href="#certification" data-tooltip="获得证书"><span class="ace-icon ace-icon-blog"></span></a>
-                            </li>
-                            <li>
-                              <a href="#personal_project" data-tooltip="个人作品"><span class="ace-icon ace-icon-snowflake-o"></span></a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-
-                <div id="ace-nav-tools" class="hidden">
-                    <span class="ace-icon ace-icon-dots-three-horizontal"></span>
-
-                    <button id="ace-nav-arrow" class="clear-btn">
-                        <span class="ace-icon ace-icon-chevron-thin-down"></span>
-                    </button>
+<body>
+    <div class="wrapper" id="wrapper">
+        <header>
+            <div class="menu">
+                <div class="navbar-wrapper">
+                    <div class="container">
+                        <div class="navwrapper">
+                            <div class="navbar navbar-inverse navbar-static-top">
+                                <div class="container">
+                                    <div class="navbar-header">
+                                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                                            <span class="icon-bar"></span>
+                                            <span class="icon-bar"></span>
+                                            <span class="icon-bar"></span>
+                                        </button>
+                                        <a class="navbar-brand" href="#">导航</a>
+                                    </div>
+                                    <div class="navbar-collapse collapse">
+                                        <ul class="nav navbar-nav nav-justified">
+                                            <li class="first menuItem homeLink active">
+                                                <a href="#aboutme">关于我</a>
+                                            </li>
+                                            <li class="menuItem">
+                                                <a href="#technical">技能</a>
+                                            </li>
+                                            <li class="menuItem">
+                                                <a href="#exprience">经历</a>
+                                            </li>
+                                            <li class="menuItem">
+                                                <a href="CV/index.html">简历</a>
+                                            </li>
+                                            <li class="menuItem">
+                                                <a href="CV/index.html">联系我</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </header>
+        <section class="aboutme" id="aboutme">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 aboutCont">
+                        <div class="heading clearfix">
+                            <h2>关于我</h2>
+                        </div>
+                        <div id="description">
+                            <p>
+                                在几个关键业务系统的开发和维护过程中，我多次担任项目负责人，负责收集并分析用户需求。
+                            </p>
+                            <p>
+                                在工作中，我注重与用户和工作团队进行有效沟通，因为这对于确保可交付成果符合标准，进度和质量非常重要。更重要的是，我具有快速学习的能力，我的勤奋和认真的态度使我能够熟练地应用不同的相关工具，如C＃，MVC和SQL Server，以及并始终在截止日期前高质量的完成我的项目。
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="technical" id="technical">
+            <div class="container">
+                <div class="heading">
+                    <h2 id="technical_title">技能</h2>
+                    <p>软件开发需要一个持续和长期的学习，需要对新技术的学习保持热情。</p>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
+                        <div class=" col-xs-12 skills">
+                            <span class="chart skilBg" data-percent="85">
+                                <span class="percent"></span>
+                            </span>
+                            <h4>HTML5</h4>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
+                        <div class=" col-xs-12 skills">
+                            <span class="chart skilBg" data-percent="85">
+                                <span class="percent"></span>
+                            </span>
+                            <h4>CSS3</h4>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
+                        <div class=" col-xs-12 skills">
+                            <span class="chart skilBg" data-percent="80">
+                                <span class="percent"></span>
+                            </span>
+                            <h4>JavasSript</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
+                        <div class=" col-xs-12 skills">
+                            <span class="chart skilBg" data-percent="85">
+                                <span class="percent"></span>
+                            </span>
+                            <h4>jQuery</h4>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
+                        <div class=" col-xs-12 skills">
+                            <span class="chart skilBg" data-percent="80">
+                                <span class="percent"></span>
+                            </span>
+                            <h4>GitHub</h4>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
+                        <div class=" col-xs-12 skills">
+                            <span class="chart skilBg" data-percent="90">
+                                <span class="percent"></span>
+                            </span>
+                            <h4>Bootstrap 3</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
+                        <div class=" col-xs-12 skills">
+                            <span class="chart skilBg" data-percent="85">
+                                <span class="percent"></span>
+                            </span>
+                            <h4>CET-6</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="exprience" id="exprience">
+            <div class="container">
+                <div class="heading">
+                    <h2>经历</h2>
+                    <p>2005年6月，毕业于长沙理工大学的环境工程专业。大学时期，利用周末的时间辅修了学校开的第二专业: 计算机网络与软件工程。</p>
+                    <p>因为本人对软件开发有着非常浓厚的兴趣，而且参加工作后一直做软件开发的。 </p>
+                    <p>于2014年，我申报了澳门大学的计算机科学的研究生。录取后，努力了4年后成功毕业。</p>
+                </div>
+                <div class="row workDetails">
+                    <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+                        <div class="workYear">
+                            <span class="prevY">08,2010</span>
+                            <span class="afterY">至今</span>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+                        <div class="arrowpart"></div>
+                        <div class="exCon">
+                            <h4>澳门华侨永亨银行</h4>
+                            <h5>程序员</h5>
+                            <p>
+                                <ul>
+                                    <li type="I">根据用户需求来设计程序，程序代码满足程序规范。</li>
+                                    <li type="I">准备测试计划和测试数据，以测试新/修订计划及其准确性和效率。</li>
+                                    <li type="I">准备和更新程序文档。</li>
+                                    <li type="I">协助设计程序规范。</li>
+                                </ul>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row workDetails">
+                    <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+                        <div class="workYear">
+                            <span class="prevY">7,2008</span>
+                            <span class="afterY">7,2010</span>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+                        <div class="arrowpart"></div>
+                        <div class="exCon">
+                            <h4>远光软件股份有限公司</h4>
+                            <h5>开发工程师</h5>
+                            <p>
+                                <ul>
+                                    <li type="I">负责远光助手的开发，并按时完成任务。</li>
+                                    <li type="I">参与用C#.net和SQL Server的C/S模式的财务会计核算3.0的开发</li>
+                                    <li type="I">负责使用Delphi和SQLite的会计档案备案及查询软件的会计档案2.0开发。</li>
+                                    <li type="I">负责远光节能网站的开发。</li>
+                                </ul>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="reffernces" id="reffernces" style="display:none">
+            <div class="container">
+                <div class="heading">
+                    <h2>项目</h2>
+                    <p>下面包括了自己的开源项目，公司项目，推荐的网站等。</p>
+                </div>
+                <div class="row waterfall" data-col-min-width="300">                    
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 refBox">
+                        <div class="refBoxcon">
+                            <p>
+                                一直保持着开发技术的学习和记录笔记。
+                            </p>
+                            <h3>
+                                <a href="https://github.com/waiwong?tab=repositories">个人开发学习记录</a>
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contact" id="contact">
+            <div class="container topCon">
+                <div class="heading">
+                    <h2>联系我</h2>
+                </div>
+            </div>
+        </section>
+        <section class="contactDetails">
+            <div class="container">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <h4>联系方式</h4>
+                    <p> <i class="icon icon-envelope"></i><a>waiwong02@outlook.com</a></p>
+                    <p> <i class="icon icon-link"></i><a href="https://github.com/waiwong">https://github.com/waiwong/</a></p>
+                    <p> <i class="icon icon-link"></i><a href="https://www.linkedin.com/in/wei-wang-2b0926ab">LindedIn</a></p>
+                </div>
+            </div>
+        </section>
+        <section class="footer" id="footer">
+            <div class="container">
+                <ul>
+                    <li>
+                        <a href="https://github.com/waiwong"><i class="icon icon-github icon-2x"></i></a>
+                    </li>
+                </ul>
+                <span class="totop">
+                    <i class="icon icon-chevron-up"></i>
+                </span>
+            </div>
+        </section>
+    </div>
+    <script src="resourses/js/jquery-2.1.4.min.js"></script>
+    <script src="resourses/js/bootstrap.js"></script>
+    <script src="resourses/js/jquery.waterfall.js"></script>
+    <script src="resourses/js/stickUp.js"></script>
+    <script type="text/javascript">
+        jQuery(function ($) {
+            $(document).ready(function () {
+                //enabling stickUp on the '.navbar-wrapper' class
 
-            <!-- <div class="ace-nav-btm"></div> -->
-        </div><!-- .ace-nav-wrap -->
+                $('.navbar-wrapper').stickUp({
+                    parts: {
+                        0: 'wrapper',
+                        1: 'aboutme',
+                        2: 'technical',
+                        3: 'exprience',
+                        4: 'contact'
+                    },
+                    itemClass: 'menuItem',
+                    itemHover: 'active',
+                    topMargin: 'auto'
+                });
+            });
+        });
 
-        <div class="ace-paper-stock">
-            <main class="ace-paper clearfix">
-                <div class="ace-paper-cont clear-mrg">
-                    <!-- START: PAGE CONTENT -->
-                    <div class="padd-box clear-mrg">
+    </script>
+    <script src="resourses/js/jquery.superslides.js"></script>
+    <script src="resourses/js/jquery.easing.min.js"></script>
+    <script src="resourses/js/custom.js"></script>
+    <script src="resourses/js/jquery.easypiechart.js"></script>
+</body>
 
-                    {% include resumer_01-basic.html %}
-
-                    {% include resumer_02-profetional.html %}
-
-                    {% include resumer_03-education.html %}
-
-                    {% include resumer_04-experience.html %}
-
-                    {% include resumer_05-certification.html %}
-
-                    {% include resumer_06-personal_project.html %}
-                        
-                    </div><!-- .padd-box -->
-                <!-- END: PAGE CONTENT -->
-                </div><!-- .ace-paper-cont -->
-            </main><!-- .ace-paper -->
-        </div><!-- .ace-paper-stock -->
-    </div><!-- .ace-container -->
-</div><!-- #ace-content -->
+</html>
