fix error setting

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                                 <a href="#exprience">经历</a>
                                             </li>
                                             <li class="menuItem">
-                                                <a href="CV/index.html">联系我</a>
+                                                <a href="#contact">联系我</a>
                                             </li>
                                             <li class="menuItem">
                                                 <a href="CV/index.html">简历</a>
@@ -152,7 +152,7 @@
                 <div class="heading">
                     <h2>经历</h2>
                     <p>
-                        2005年6月，毕业于长沙理工大学的环境工程专业。                        <br />
+                        2005年6月，毕业于长沙理工大学的环境工程专业。<br />
                         大学时期，利用周末的时间辅修了学校开的第二专业: 计算机网络与软件工程。<br />
                         因为本人对软件开发有着非常浓厚的兴趣，而且参加工作后一直做软件开发的。<br />
                         于2014年，我申报了澳门大学的计算机科学的研究生。录取后，努力了4年后成功毕业。
