try add notes links.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                                             <li class="menuItem">
                                                 <a href="CV/index.html">简历</a>
                                             </li>
+                                            <li class="menuItem">
+                                                <a href="Notes/index.md">笔记</a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
