fixed cannot link to markdown

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                                 <a href="CV/index.html">简历</a>
                                             </li>
                                             <li class="menuItem">
-                                                <a href="Notes/index.md">笔记</a>
+                                                <a href="https://github.com/waiwong/waiwong.github.io/blob/master/Notes/index.md">笔记</a>
                                             </li>
                                         </ul>
                                     </div>
