--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
                                             <li class="menuItem">
                                                 <a href="CV/index.html">简历</a>
                                             </li>
-                                            <li class="menuItem">
-                                                <a href="https://github.com/waiwong/waiwong.github.io/blob/master/Notes/index.md">笔记</a>
-                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -205,26 +202,6 @@
                 </div>
             </div>
         </section>
-        <section class="reffernces" id="reffernces" style="display:none">
-            <div class="container">
-                <div class="heading">
-                    <h2>项目</h2>
-                    <p>下面包括了自己的开源项目，公司项目，推荐的网站等。</p>
-                </div>
-                <div class="row waterfall" data-col-min-width="300">
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 refBox">
-                        <div class="refBoxcon">
-                            <p>
-                                一直保持着开发技术的学习和记录笔记。
-                            </p>
-                            <h3>
-                                <a href="https://github.com/waiwong?tab=repositories">个人开发学习记录</a>
-                            </h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
         <section class="contact" id="contact">
             <div class="container topCon">
                 <div class="heading">
@@ -237,18 +214,26 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <h4>联系方式</h4>
                     <p> <i class="icon icon-envelope"></i><a>waiwong02@outlook.com</a></p>
-                    <p> <i class="icon icon-link"></i><a href="https://github.com/waiwong">https://github.com/waiwong/</a></p>
+                    <p> <i class="icon icon-github"></i><a href="https://github.com/waiwong">https://github.com/waiwong/</a></p>
                     <p> <i class="icon icon-link"></i><a href="https://www.linkedin.com/in/wei-wang-2b0926ab">LindedIn</a></p>
                 </div>
             </div>
         </section>
         <section class="footer" id="footer">
             <div class="container">
-                <ul>
+                <div class="footer-menu">
+                    <div class="footer-list">
+                        <div class="footer-heading">More</div>
+                        <ul>
+                            <li><a href="https://github.com/waiwong/waiwong.github.io/blob/master/Notes/index.md">Notes</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--<ul>
                     <li>
                         <a href="https://github.com/waiwong"><i class="icon icon-github icon-2x"></i></a>
                     </li>
-                </ul>
+                </ul>-->
                 <span class="totop">
                     <i class="icon icon-chevron-up"></i>
                 </span>
