--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="http://cody1991.github.io/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>WangWei(王维)个人简历</title>
+    <title>WangWei(王维)个人主页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" type="text/css" href="resourses/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="resourses/css/style.css">
