1. Add note of C-Sharp; 2. format markdown file;

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                                                 <a href="#exprience">经历</a>
                                             </li>
                                             <li class="menuItem">
+                                                <a href="#project">项目</a>
+                                            </li>
+                                            <li class="menuItem">
                                                 <a href="#contact">联系我</a>
                                             </li>
                                             <li class="menuItem">
@@ -81,7 +84,10 @@
             <div class="container">
                 <div class="heading">
                     <h2 id="technical_title">技能</h2>
-                    <p>软件开发需要一个持续和长期的学习，需要对新技术的学习保持热情。</p>
+                    <p>
+                        软件开发需要一个持续和长期的学习，需要对新技术的学习保持热情。<br />
+                        在非工作时间，我都有在努力的学习新的技术。由于最近的工作需要，2019年来，我在断断续续的学习RPA，而所用的软件为UIPath。
+                    </p>
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
@@ -155,7 +161,7 @@
                         2005年6月，毕业于长沙理工大学的环境工程专业。<br />
                         大学时期，利用周末的时间辅修了学校开的第二专业: 计算机网络与软件工程。<br />
                         因为本人对软件开发有着非常浓厚的兴趣，而且参加工作后一直做软件开发的。<br />
-                        于2014年，我申报了澳门大学的计算机科学的研究生。录取后，努力了4年后成功毕业。
+                        并于2014年，我申报了澳门大学的计算机科学的研究生，同年顺利录取。澳门大学的研究生的所有的课程都是在晚上，因为我白天需要上班，所以为了这个自我增值的机会，我付出了很多，尽管已经很努力在学习，但也多花了一年的时间才拿到证书。
                     </p>
                 </div>
                 <div class="row workDetails">
