Remove the http link of icon.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="http://cody1991.github.io/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>WangWei(王维)个人主页</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" type="text/css" href="resourses/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="resourses/css/style.css">
     <link rel="stylesheet" href="resourses/css/font-awesome.min.css">
@@ -25,7 +25,8 @@
                             <div class="navbar navbar-inverse navbar-static-top">
                                 <div class="container">
                                     <div class="navbar-header">
-                                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                                        <button type="button" class="navbar-toggle" data-toggle="collapse"
+                                            data-target=".navbar-collapse">
                                             <span class="icon-bar"></span>
                                             <span class="icon-bar"></span>
                                             <span class="icon-bar"></span>
@@ -73,7 +74,8 @@
                                 在几个关键业务系统的开发和维护过程中，我多次担任项目负责人，负责收集并分析用户需求。
                             </p>
                             <p>
-                                在工作中，我注重与用户和工作团队进行有效沟通，因为这对于确保可交付成果符合标准，进度和质量非常重要。更重要的是，我具有快速学习的能力，我的勤奋和认真的态度使我能够熟练地应用不同的相关工具，如C＃，MVC和SQL Server，以及并始终在截止日期前高质量的完成我的项目。
+                                在工作中，我注重与用户和工作团队进行有效沟通，因为这对于确保可交付成果符合标准，进度和质量非常重要。更重要的是，我具有快速学习的能力，我的勤奋和认真的态度使我能够熟练地应用不同的相关工具，如C＃，MVC和SQL
+                                Server，以及并始终在截止日期前高质量的完成我的项目。
                             </p>
                         </div>
                     </div>
@@ -220,8 +222,10 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <h4>联系方式</h4>
                     <p> <i class="icon icon-envelope"></i><a>waiwong02@outlook.com</a></p>
-                    <p> <i class="icon icon-github"></i><a href="https://github.com/waiwong">https://github.com/waiwong/</a></p>
-                    <p> <i class="icon icon-link"></i><a href="https://www.linkedin.com/in/wei-wang-2b0926ab">LindedIn</a></p>
+                    <p> <i class="icon icon-github"></i><a
+                            href="https://github.com/waiwong">https://github.com/waiwong/</a></p>
+                    <p> <i class="icon icon-link"></i><a
+                            href="https://www.linkedin.com/in/wei-wang-2b0926ab">LindedIn</a></p>
                 </div>
             </div>
         </section>
@@ -231,7 +235,9 @@
                     <div class="footer-list">
                         <div class="footer-heading">More</div>
                         <ul>
-                            <li><a href="https://github.com/waiwong/waiwong.github.io/blob/master/Notes/index.md">Notes</a></li>
+                            <li><a
+                                    href="https://github.com/waiwong/waiwong.github.io/blob/master/Notes/index.md">Notes</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -269,7 +275,6 @@
                 });
             });
         });
-
     </script>
     <script src="resourses/js/jquery.superslides.js"></script>
     <script src="resourses/js/jquery.easing.min.js"></script>
