1. add project of my index page; 2. add md for excel vba study.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="http://cody1991.github.io/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>WangWei(王维)个人主页</title>
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" type="text/css" href="resourses/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="resourses/css/style.css">
     <link rel="stylesheet" href="resourses/css/font-awesome.min.css">
@@ -25,8 +25,7 @@
                             <div class="navbar navbar-inverse navbar-static-top">
                                 <div class="container">
                                     <div class="navbar-header">
-                                        <button type="button" class="navbar-toggle" data-toggle="collapse"
-                                            data-target=".navbar-collapse">
+                                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                             <span class="icon-bar"></span>
                                             <span class="icon-bar"></span>
                                             <span class="icon-bar"></span>
@@ -70,13 +69,14 @@
                             <h2>关于我</h2>
                         </div>
                         <div id="description">
+                            <p>首先，我是一个有着强烈责任感的人。</p>
                             <p>
                                 在几个关键业务系统的开发和维护过程中，我多次担任项目负责人，负责收集并分析用户需求。
                             </p>
                             <p>
-                                在工作中，我注重与用户和工作团队进行有效沟通，因为这对于确保可交付成果符合标准，进度和质量非常重要。更重要的是，我具有快速学习的能力，我的勤奋和认真的态度使我能够熟练地应用不同的相关工具，如C＃，MVC和SQL
-                                Server，以及并始终在截止日期前高质量的完成我的项目。
+                                在工作中，我注重与用户和工作团队进行有效沟通，因为这对于确保可交付成果符合标准，进度和质量非常重要。更重要的是，我具有快速学习的能力，我的勤奋和认真的态度使我能够熟练地应用不同的相关工具，如C＃，MVC和SQL Server，以及并始终在截止日期前高质量的完成我的项目。
                             </p>
+                            <p>我具有的批判性思维能力，所以我经常可以提出一些创新且针对性强的建议。</p>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                     <h2 id="technical_title">技能</h2>
                     <p>
                         软件开发需要一个持续和长期的学习，需要对新技术的学习保持热情。<br />
-                        在非工作时间，我都有在努力的学习新的技术。由于最近的工作需要，2019年来，我在断断续续的学习RPA，而所用的软件为UIPath。
+                        在非工作时间，我都有在努力的学习新的技术。由于最近的工作需要，2019年来，我在断断续续的学习RPA，而所用的软件为UiPath。
                     </p>
                 </div>
                 <div class="row">
@@ -162,8 +162,8 @@
                     <p>
                         2005年6月，毕业于长沙理工大学的环境工程专业。<br />
                         大学时期，利用周末的时间辅修了学校开的第二专业: 计算机网络与软件工程。<br />
-                        因为本人对软件开发有着非常浓厚的兴趣，而且参加工作后一直做软件开发的。<br />
-                        并于2014年，我申报了澳门大学的计算机科学的研究生，同年顺利录取。澳门大学的研究生的所有的课程都是在晚上，因为我白天需要上班，所以为了这个自我增值的机会，我付出了很多，尽管已经很努力在学习，但也多花了一年的时间才拿到证书。
+                        我对软件开发一直都有着非常浓厚的兴趣，毕业参加工作后我始终都是在从事软件开发的工作。<br />
+                        鉴于本科专业不是计算机相关，于是我于2014年申报了澳门大学的计算机科学专业的研究生并得到顺利录取。澳门大学的研究生的所有的课程都是在晚上，因为我白天需要上班，所以为了这个自我增值的机会，我付出了很多，尽管已经很努力的学习，但是我也多花了一年的时间才拿到证书。
                     </p>
                 </div>
                 <div class="row workDetails">
@@ -208,6 +208,120 @@
                         </div>
                     </div>
                 </div>
+                <div class="row workDetails">
+                    <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+                        <div class="workYear">
+                            <span class="prevY">7,2007</span>
+                            <span class="afterY">7,2008</span>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+                        <div class="arrowpart"></div>
+                        <div class="exCon">
+                            <h4>珠海伟诚科技有限公司</h4>
+                            <h5>开发工程师</h5>
+                            <p>
+                                利用Asp.Net、C# 和 Microsoft SQL Server 2000进行基于B/S模式的web应用程序开发。
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="reffernces" id="project">
+            <div class="container">
+                <div class="heading">
+                    <h2>项目</h2>
+                </div>
+                <div class="row workDetails">
+                    <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+                        <div class="workYear">
+                            <span class="prevY">12,2018</span>
+                            <span class="afterY">至今</span>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+                        <div class="arrowpart"></div>
+                        <div class="exCon">
+                            <h4>RPA of LWS</h4>
+                            <h5>项目描述</h5>
+                            <p>
+                                用户输入贷款必需资料到excel，excel汇总成数据集，通过UI Path来处理并自动输入到LWS系统（RPA).
+                            </p>
+                            <h5>项目职责</h5>
+                            <p>
+                                了解用户需求，学习LWS的系统输入要求，负责用户与开发人员的之间沟通，并参与开发。
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row workDetails">
+                    <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+                        <div class="workYear">
+                            <span class="prevY">05,2012</span>
+                            <span class="afterY">至今</span>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+                        <div class="arrowpart"></div>
+                        <div class="exCon">
+                            <h4>Negative Check</h4>
+                            <h5>项目描述</h5>
+                            <p>
+                                提供界面给用户登记黑名单数据，然后整合从接口文件导入的过期数据。根据用户输入的关键词出具报表。
+                            </p>
+                            <h5>项目职责</h5>
+                            <p>
+                                学习并优化已有系统。
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row workDetails">
+                    <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+                        <div class="workYear">
+                            <span class="prevY">02,2012</span>
+                            <span class="afterY">至今</span>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+                        <div class="arrowpart"></div>
+                        <div class="exCon">
+                            <h4>SMS</h4>
+                            <h5>项目描述</h5>
+                            <p>
+                                1，提供界面给用户上传文件，然后生成短信提供商（CTM，Three）需要的格式并上传。<br />
+                                2，提供预定日期和优先级。
+                            </p>
+                            <h5>项目职责</h5>
+                            <p>
+                                根据需求分析并设计系统，然后实现。
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row workDetails">
+                    <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+                        <div class="workYear">
+                            <span class="prevY">05,2016</span>
+                            <span class="afterY">10,2016</span>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+                        <div class="arrowpart"></div>
+                        <div class="exCon">
+                            <h4>Print Cheque</h4>
+                            <h5>项目描述</h5>
+                            <p>
+                                解密用户上传的数据文件后，导入支票数据并打印。使用OCR来辅助校验已打印的支票。
+                            </p>
+                            <h5>项目职责</h5>
+                            <p>
+                                负责分析用户要求，设计系统架构并实现。
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="contact" id="contact">
@@ -222,10 +336,8 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <h4>联系方式</h4>
                     <p> <i class="icon icon-envelope"></i><a>waiwong02@outlook.com</a></p>
-                    <p> <i class="icon icon-github"></i><a
-                            href="https://github.com/waiwong">https://github.com/waiwong/</a></p>
-                    <p> <i class="icon icon-link"></i><a
-                            href="https://www.linkedin.com/in/wei-wang-2b0926ab">LindedIn</a></p>
+                    <p> <i class="icon icon-github"></i><a href="https://github.com/waiwong">https://github.com/waiwong/</a></p>
+                    <p> <i class="icon icon-link"></i><a href="https://www.linkedin.com/in/wei-wang-2b0926ab">LindedIn</a></p>
                 </div>
             </div>
         </section>
@@ -235,9 +347,7 @@
                     <div class="footer-list">
                         <div class="footer-heading">More</div>
                         <ul>
-                            <li><a
-                                    href="https://github.com/waiwong/waiwong.github.io/blob/master/Notes/index.md">Notes</a>
-                            </li>
+                            <li><a href="https://github.com/waiwong/waiwong.github.io/blob/master/Notes/index.md">Notes</a></li>
                         </ul>
                     </div>
                 </div>
@@ -275,6 +385,7 @@
                 });
             });
         });
+
     </script>
     <script src="resourses/js/jquery.superslides.js"></script>
     <script src="resourses/js/jquery.easing.min.js"></script>
