update the project description.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <p>
                                 在工作中，我注重与用户和工作团队进行有效沟通，因为这对于确保可交付成果符合标准，进度和质量非常重要。更重要的是，我具有快速学习的能力，我的勤奋和认真的态度使我能够熟练地应用不同的相关工具，如C＃，MVC和SQL Server，以及并始终在截止日期前高质量的完成我的项目。
                             </p>
-                            <p>我具有的批判性思维能力，所以我经常可以提出一些创新且针对性强的建议。</p>
+                            <p>我具有的批判性思维能力，使我经常可以就发展工作提出一些创新且针对性强的建议。</p>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                     <h2 id="technical_title">技能</h2>
                     <p>
                         软件开发需要一个持续和长期的学习，需要对新技术的学习保持热情。<br />
-                        在非工作时间，我都有在努力的学习新的技术。由于最近的工作需要，2019年来，我在断断续续的学习RPA，而所用的软件为UiPath。
+                        在非工作时间，我都有在努力的学习新的技术。由于最近的工作需要，2019年来，我在课后时间学习RPA，使用的开发软件为UiPath。
                     </p>
                 </div>
                 <div class="row">
@@ -246,11 +246,15 @@
                             <h4>RPA of LWS</h4>
                             <h5>项目描述</h5>
                             <p>
-                                用户输入贷款必需资料到excel，excel汇总成数据集，通过UI Path来处理并自动输入到LWS系统（RPA).
+                                用户输入贷款必需资料到excel，使用UI Path 创建RPA流程来把excel汇总成的数据自动输入到LWS系统。
                             </p>
                             <h5>项目职责</h5>
                             <p>
-                                了解用户需求，学习LWS的系统输入要求，负责用户与开发人员的之间沟通，并参与开发。
+                                1. 与团队成员沟通项目状态，根据管理层的要求参加项目会议和其他职能。
+                                2. 收集和分析业务需求和用户需求，决定最佳的行动方案，并准备程序规范。
+                                3. 研究、分析系统、设计和实现这个新的工具。
+                                4. 提供用户验收测试的支持，在测试过程中提供评估、升级和解决问题。
+                                5. 为生产环境的使用提供实施后的支持和培训。
                             </p>
                         </div>
                     </div>
@@ -272,7 +276,9 @@
                             </p>
                             <h5>项目职责</h5>
                             <p>
-                                学习并优化已有系统。
+                                1. 维护和增强现有系统，包括在线和批处理程序，修复现有bug，添加新功能，提高程序性能。
+                                2. 为生产环境提供支持，识别问题，进行必要的更新。
+                                3. 快速分析并解决问题。
                             </p>
                         </div>
                     </div>
@@ -295,7 +301,10 @@
                             </p>
                             <h5>项目职责</h5>
                             <p>
-                                根据需求分析并设计系统，然后实现。
+                                1. 评估用户需求以确定具体任务和对新程序的影响。
+                                2. 设计、开发、测试和部署整个工具。
+                                3. 提供用户验收测试的支持，在测试过程中提供评估、升级和解决问题。
+                                4. 为生产环境的使用提供实施后的支持和培训。
                             </p>
                         </div>
                     </div>
@@ -317,7 +326,11 @@
                             </p>
                             <h5>项目职责</h5>
                             <p>
-                                负责分析用户要求，设计系统架构并实现。
+                                1. 收集和分析业务需求，准备功能规范和技术设计规范。
+                                2. 在UAT环境中设计、编码、测试、实现这个内部开发的应用程序和报告。
+                                3. 提供用户验收测试的支持，在测试过程中提供评估、升级和解决问题。
+                                4. 为生产环境的使用提供实施后的支持和培训。
+                                5. 使用OCR (Microsoft onenote OCR，Google tesseract OCR) 来检查打印数据是否正确。
                             </p>
                         </div>
                     </div>
